--- a/cifar10_experiment1.ipynb
+++ b/cifar10_experiment1.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "# CIFAR-10 experiment 1 (09022018)\n",
     "\n",
-    "The goal of this notebook is to explore CIFAR-10 dataset, estabilish an SVM benchmark, extract features using a pre-trained ConvNet and fit and evaluate a final SVM classifier."
+    "The goal of this notebook is to explore CIFAR-10 dataset, estabilish an knn benchmark, extract features using a pre-trained ConvNet and fit and evaluate a final SVM classifier."
    ]
   },
   {
